updated to ANTU

--- a/index.html
+++ b/index.html
@@ -7,13 +7,13 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">   
-    <title>SAJID - portfolio</title>
+    <title>ANTU - portfolio</title>
 </head>
 <body>
     <section>
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">SAJID</span> Website</h1>
+            <h1><span class="name-highlight">ANTU</span> Website</h1>
             <h3>World class web dev</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse corrupti distinctio aspernatur ex tempora. Maiores, ex voluptatibus, adipisci deleniti quo nemo quisquam laudantium amet necessitatibus ipsam modi, voluptatum soluta eligendi.</p>
         </div>
