--- a/index.html
+++ b/index.html
@@ -7,20 +7,49 @@
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.gstatic.com">
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap" rel="stylesheet">   
-    <title>ANTU - portfolio</title>
+    <title>SAJID</title>
 </head>
 <body>
-    <section>
+    
+    <section class="top-banner">
         <div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">ANTU</span> Website</h1>
+            <h1><span class="name-highlight">SAJID's</span> Website</h1>
             <h3>World class web dev</h3>
             <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Esse corrupti distinctio aspernatur ex tempora. Maiores, ex voluptatibus, adipisci deleniti quo nemo quisquam laudantium amet necessitatibus ipsam modi, voluptatum soluta eligendi.</p>
+            <a class="link-button" target="_blank" href="https://github.com/sajid73">HIRE ME</a>
         </div>
         <div class="half-width">
-            <img src="images/image 12.png" alt="">
+            <img src="images/jhankar.png" alt="">
         </div>
     </section>
+    <section class="dream-area">
+        <div class="half-width">
+            <img src="images/jhankar2.png" alt="">
+        </div>
+        <div class="half-width">
+            <h2>Big Dream</h2>
+            <h3>Becomes world's no. 1 web dev</h3>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Voluptatum eligendi sed quas in ut, rerum ex quidem quibusdam, doloribus facere, dolor eveniet facilis soluta ratione esse hic sapiente delectus aperiam tempore quaerat nesciunt. Ad quis obcaecati commodi quae architecto laborum, ducimus, optio sunt error aliquid animi unde vitae ea sapiente blanditiis eos nostrum veritatis. Voluptatibus voluptas voluptatem, praesentium consequatur ullam aliquid nobis optio accusamus adipisci quibusdam, quasi fugit dolorem autem enim animi blanditiis? Esse soluta sint quod dolore? Quis, modi.</p>
+            <a class="link-button" target="_blank" href="https://github.com/sajid73">Download Resume</a>
+        </div>
+    </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Dev</h2>
+            <h3 class="name-highlight">2022 - Present | Pro Level Web Dev</h3>
+            <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quibusdam adipisci corporis repellat atque qui repellendus porro, alias reiciendis impedit laudantium aliquam veritatis totam voluptate iste nemo nulla numquam, accusantium, deleniti beatae minima! At a qui neque ex nisi quos. Aliquid magni aliquam labore facilis laboriosam aut deserunt temporibus, voluptates repellendus?</p>
+        </div>
+        <div id="baby-web" class="half-width single-experience">
+            <h2>Baby Web Developer</h2>
+            <h3 class="name-highlight">2021 - 2022 | Programming Hero Learner</h3>
+            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa voluptatibus at nihil, ex quaerat voluptates commodi eveniet nulla, laborum non a? Quidem similique alias quo sequi dicta ipsum, laborum aut ut provident velit magni doloremque labore? Atque cupiditate accusamus fuga nisi, quis eaque, quae dolores repellendus ad quibusdam pariatur sint!</p>
+        </div>
 
+    </section>
+    <footer>
+        <p>&copy; Sajidul Mowla | A programming Hero Learner</p>
+    </footer>
 </body>
 </html>
